--- a/BankService/src/main/resources/application.yml
+++ b/BankService/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server:
 
 spring:
   application:
-    name: challet-service
+    name: bank-service
   datasource:
-    url: jdbc:mysql://localhost:3307/challet-api?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3308/bank-api?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: ssafy
     password: ssafy
@@ -25,13 +25,13 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://127.0.0.1:8761/eureka
 
 springdoc:
   api-docs:
     version: openapi_3_1
     enabled: true
-    path: /challet-service/v3/api-docs
+    path: /bank-service/v3/api-docs
     # 게이트웨이 라우팅에서 prefix를 제거하지 않았다면 해당 설정을 추가
     # json으로 swagger를 변환시켜 주고 받기
   enable-spring-security: true
