feat: NH-Bank swagger 문서화

--- a/ChalletApiGateway/src/main/resources/application.yml
+++ b/ChalletApiGateway/src/main/resources/application.yml
@@ -22,22 +22,22 @@ spring:
         - id: bank-service
           uri: lb://BANK-SERVICE
           predicates:
-            - Path=/bank-service/**
+            - Path=/bank-service/challet-banks/**
 
         - id: kbbank-service
           uri: lb://KBBANK-SERVICE
           predicates:
-            - Path=/kb-bank-service/**
+            - Path=/bank-service/kb-banks/**
 
         - id: nhbank-service
           uri: lb://NHBANK-SERVICE
           predicates:
-            - Path=/nh-bank-service/**
+            - Path=/bank-service/nh-banks/**
 
         - id: shbank-service
           uri: lb://SHBANK-SERVICE
           predicates:
-            - Path=/sh-bank-service/**
+            - Path=/bank-service/sh-banks/**
 
 
 springdoc:
@@ -48,13 +48,13 @@ springdoc:
       url: challet-service/v3/api-docs
     urls[1]:
       name: BankService
-      url: bank-service/v3/api-docs
+      url: bank-service/challet-banks/v3/api-docs
     urls[2]:
       name: KbBankService
-      url: kb-bank-service/v3/api-docs
+      url: bank-service/kb-banks/v3/api-docs
     urls[3]:
       name: NhBankService
-      url: nh-bank-service/v3/api-docs
+      url: bank-service/nh-banks/v3/api-docs
     urls[4]:
       name: ShBankService
-      url: sh-bank-service/v3/api-docs
+      url: bank-service/sh-banks/v3/api-docs
