--- a/FrontEnd/challet/package.json
+++ b/FrontEnd/challet/package.json
@@ -10,16 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.7.7",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@types/react-transition-group": "^4.4.11",
+    "@woowa-babble/random-nickname": "^1.0.2",
     "@zxing/browser": "^0.1.5",
     "@zxing/library": "^0.21.3",
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
+    "react-transition-group": "^4.4.5",
     "vite-plugin-pwa": "^0.20.5",
     "zustand": "^4.5.5"
   },
