--- a/FrontEnd/challet/package.json
+++ b/FrontEnd/challet/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.7.7",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@types/react-datepicker": "^7.0.0",
     "@zxing/browser": "^0.1.5",
     "@zxing/library": "^0.21.3",
+    "axios": "^1.7.7",
+    "date-fns": "^3.6.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
+    "react-dates": "^21.8.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "vite-plugin-pwa": "^0.20.5",
