--- a/ShBankService/src/main/resources/application.yml
+++ b/ShBankService/src/main/resources/application.yml
@@ -2,6 +2,42 @@ server:
   port: 8085
 
 spring:
+  profiles:
+    active: prod # 로컬(dev) / git(prod)
+
+---
+# 로컬(dev) 환경 설정
+spring:
+  config:
+    activate:
+      on-profile: dev
+
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+
+---
+# 프로덕션(prod) 환경 설정
+spring:
+  config:
+    activate:
+      on-profile: prod
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://challet.world:8761/eureka
+
+---
+# 공통 설정
+spring:
   config:
     import: application-key.yml
   application:
@@ -15,14 +51,6 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-
-eureka:
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    service-url:
-      defaultZone: http://127.0.0.1:8761/eureka
-
 
 springdoc:
   api-docs:
