--- a/BankService/Dockerfile
+++ b/BankService/Dockerfile
@@ -1,8 +1,8 @@
-FROM amazoncorretto21
+FROM amazoncorretto:21
 
-ARG JAR_FILE=buildlibsBankService-0.0.1-SNAPSHOT.jar
+ARG JAR_FILE=build/libs/BankService-0.0.1-SNAPSHOT.jar
 COPY ${JAR_FILE} app.jar
 
 EXPOSE 8082
 
-ENTRYPOINT [java,-jar,app.jar]
+ENTRYPOINT ["java","-jar","/app.jar"]
