--- a/KbBankService/Dockerfile
+++ b/KbBankService/Dockerfile
@@ -1,8 +1,8 @@
-FROM amazoncorretto21
+FROM amazoncorretto:21
 
-ARG JAR_FILE=buildlibsKbBankService-0.0.1-SNAPSHOT.jar
+ARG JAR_FILE=build/libs/KbBankService-0.0.1-SNAPSHOT.jar
 COPY ${JAR_FILE} app.jar
 
 EXPOSE 8083
 
-ENTRYPOINT [java,-jar,app.jar]
+ENTRYPOINT ["java","-jar","/app.jar"]
