--- a/ChalletApiGateway/src/main/resources/application.yml
+++ b/ChalletApiGateway/src/main/resources/application.yml
@@ -11,6 +11,7 @@ spring:
   config:
     activate:
       on-profile: dev
+    import: application-key.yml
 
 eureka:
   client:
@@ -25,6 +26,7 @@ spring:
   config:
     activate:
       on-profile: prod
+    import: "optional:file:/BankService/src/main/resources/application-key.yml"
 
 eureka:
   client:
@@ -66,6 +68,8 @@ spring:
           uri: lb://SHBANK-SERVICE
           predicates:
             - Path=/sh-bank-service/**
+      default-filters:
+        - name: JwtAuthenticationFilter
 
 
 springdoc:
@@ -86,3 +90,7 @@ springdoc:
     urls[4]:
       name: ShBankService
       url: sh-bank-service/v3/api-docs
+jwt:
+  secret: ${jwt_secret_key}
+  access-exp: ${jwt_access_exp}
+  refresh-exp: ${jwt_refresh_exp}
