--- a/NhBankService/src/main/resources/application.yml
+++ b/NhBankService/src/main/resources/application.yml
@@ -11,6 +11,8 @@ spring:
   config:
     activate:
       on-profile: dev
+    import: application-key.yml
+
 
 eureka:
   instance:
@@ -27,6 +29,7 @@ spring:
   config:
     activate:
       on-profile: prod
+    import: "optional:file:/NhBankService/src/main/resources/application-key.yml"
 
 eureka:
   client:
@@ -38,8 +41,6 @@ eureka:
 ---
 # 공통 설정
 spring:
-  config:
-    import: application-key.yml
   application:
     name: nhbank-service
   datasource:
@@ -51,6 +52,7 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+    open-in-view: false
 
 springdoc:
   api-docs:
