fix: spring.config.import 경로 오타 수정

--- a/ShBankService/src/main/resources/application.yml
+++ b/ShBankService/src/main/resources/application.yml
@@ -11,6 +11,7 @@ spring:
   config:
     activate:
       on-profile: dev
+    import: application-key.yml
 
 eureka:
   instance:
@@ -27,6 +28,9 @@ spring:
   config:
     activate:
       on-profile: prod
+    import: "optional:file:/ShBankService/src/main/resources/application-key.yml"
+
+
 
 eureka:
   client:
@@ -38,8 +42,6 @@ eureka:
 ---
 # 공통 설정
 spring:
-  config:
-    import: application-key.yml
   application:
     name: shbank-service
   datasource:
@@ -51,6 +53,7 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+    open-in-view: false
 
 springdoc:
   api-docs:
