--- a/ChalletApiGateway/src/main/resources/application.yml
+++ b/ChalletApiGateway/src/main/resources/application.yml
@@ -11,6 +11,8 @@ spring:
   config:
     activate:
       on-profile: dev
+    import: application-key.yml
+
 
 eureka:
   client:
@@ -25,6 +27,9 @@ spring:
   config:
     activate:
       on-profile: prod
+    import: "optional:file:/ChalletApiGateway/src/main/resources/application-key.yml"
+
+
 
 eureka:
   client:
