--- a/BankService/build.gradle
+++ b/BankService/build.gradle
@@ -25,6 +25,7 @@ repositories {
 
 ext {
     set('springCloudVersion', "2023.0.3")
+    set('querydslVersion', "5.0.0") // Querydsl 버전 명시
 }
 
 dependencies {
@@ -38,6 +39,12 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.2.0'
+
+    //Querydsl 추가
+    implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
+    annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 }
 
 dependencyManagement {
