--- a/FrontEnd/challet/Dockerfile
+++ b/FrontEnd/challet/Dockerfile
@@ -1,21 +1,15 @@
-# Step 1: Build React App
 FROM node:20 as build-stage
 WORKDIR /app
-
-# Install dependencies
 COPY package*.json ./
-RUN npm install
 
-# Copy all files and build the app
+RUN npm install --legacy-peer-deps
 COPY . .
 RUN npm run build
 
-# Step 2: Serve the build with Nginx
 FROM nginx:stable-alpine as production-stage
-COPY --from=build-stage /app/build /usr/share/nginx/html
+COPY --from=build-stage /app/dist /usr/share/nginx/html
 
-# Nginx 설정 파일이 있다면 이 부분을 추가
 COPY nginx.conf /etc/nginx/nginx.conf
 
-EXPOSE 80
+EXPOSE 3000
 CMD ["nginx", "-g", "daemon off;"]
