--- a/BankService/src/main/resources/application.yml
+++ b/BankService/src/main/resources/application.yml
@@ -37,12 +37,9 @@ eureka:
 
 ---
 # 공통 설정
-
 spring:
-  config:
-    import: application-key.yml
   application:
-    name: bank-service
+    name: ch-bank
   datasource:
     url: jdbc:mysql://challet.world:${dbport}/chbank-api?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -53,12 +50,11 @@ spring:
       ddl-auto: update
     show-sql: true
 
-
 springdoc:
   api-docs:
     version: openapi_3_1
     enabled: true
-    path: /bank-service/v3/api-docs
+    path: api/ch-bank/v3/api-docs
   enable-spring-security: true
   default-consumes-media-type: application/json
   default-produces-media-type: application/json
