--- a/ChalletService/src/main/resources/application.yml
+++ b/ChalletService/src/main/resources/application.yml
@@ -38,10 +38,8 @@ eureka:
 ---
 # 공통 설정
 spring:
-  config:
-    import: application-key.yml
   application:
-    name: challet-service
+    name: challet
   datasource:
     url: jdbc:mysql://challet.world:${dbport}/challet-api?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -56,7 +54,7 @@ springdoc:
   api-docs:
     version: openapi_3_1
     enabled: true
-    path: challet-service/v3/api-docs
+    path: api/challet/v3/api-docs
   enable-spring-security: true
   default-consumes-media-type: application/json
   default-produces-media-type: application/json
