--- a/ShBankService/src/main/resources/application.yml
+++ b/ShBankService/src/main/resources/application.yml
@@ -41,7 +41,7 @@ spring:
   config:
     import: application-key.yml
   application:
-    name: shbank-service
+    name: sh-bank
   datasource:
     url: jdbc:mysql://challet.world:${dbport}/shbank-api?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -56,7 +56,7 @@ springdoc:
   api-docs:
     version: openapi_3_1
     enabled: true
-    path: sh-bank-service/v3/api-docs
+    path: api/sh-bank/v3/api-docs
   enable-spring-security: true
   default-consumes-media-type: application/json
   default-produces-media-type: application/json
