refactor: 경로 수정 및 application 수정

--- a/NhBankService/src/main/resources/application.yml
+++ b/NhBankService/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   profiles:
-    active: prod # 로컬(dev) / git(prod)
+    active: dev # 로컬(dev) / git(prod)
 
 ---
 # 로컬(dev) 환경 설정
@@ -11,8 +11,6 @@ spring:
   config:
     activate:
       on-profile: dev
-    import: application-key.yml
-
 
 eureka:
   instance:
@@ -29,7 +27,6 @@ spring:
   config:
     activate:
       on-profile: prod
-    import: "optional:file:/NhBankService/src/main/resources/application-key.yml"
 
 eureka:
   client:
@@ -41,8 +38,10 @@ eureka:
 ---
 # 공통 설정
 spring:
+  config:
+    import: application-key.yml
   application:
-    name: nhbank-service
+    name: nh-bank
   datasource:
     url: jdbc:mysql://challet.world:${dbport}/nhbank-api?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -52,13 +51,12 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-    open-in-view: false
 
 springdoc:
   api-docs:
     version: openapi_3_1
     enabled: true
-    path: nh-bank-service/v3/api-docs
+    path: api/nh-bank/v3/api-docs
   enable-spring-security: true
   default-consumes-media-type: application/json
   default-produces-media-type: application/json
