--- a/FrontEnd/challet/conf/nginx.conf
+++ b/FrontEnd/challet/conf/nginx.conf
@@ -1,4 +1,9 @@
+# Nginx 메인 설정
+user nginx;
 worker_processes auto;
+
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
 
 events {
     worker_connections 1024;
@@ -7,26 +12,38 @@ events {
 http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
+    
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log /var/log/nginx/access.log main;
 
     sendfile on;
     keepalive_timeout 65;
+    gzip on;
 
-    # React 앱을 서빙하는 기본 서버 설정
+    # React 앱을 서빙할 서버 설정
     server {
-        listen 4000;
-        server_name localhost;
+        listen 4000;  # Nginx가 4000 포트에서 대기하도록 설정
+        server_name localhost;  # 도메인 이름 (로컬 혹은 설정된 도메인)
 
+        # 정적 파일 서빙 설정
         location / {
-            root /usr/share/nginx/html;
-            index index.html;
-            try_files $uri $uri/ /index.html;  # React의 SPA 지원
+            root /usr/share/nginx/html;  # React 빌드 파일들이 위치한 경로
+            index index.html;  # 기본 페이지 파일
+            try_files $uri $uri/ /index.html;  # SPA 라우팅을 위한 설정
         }
 
-        # 에러 페이지 설정
+        # 에러 페이지 설정 (옵션)
+        error_page 404 /404.html;
+        location = /404.html {
+            root /usr/share/nginx/html;
+        }
+
         error_page 500 502 503 504 /50x.html;
         location = /50x.html {
             root /usr/share/nginx/html;
         }
     }
 }
-
