--- a/FrontEnd/challet/Dockerfile
+++ b/FrontEnd/challet/Dockerfile
@@ -9,7 +9,7 @@ RUN npm run build
 FROM nginx:stable-alpine as production-stage
 
 # 저장된 경로에서 nginx.conf 파일을 복사
-COPY ./conf/default.conf /etc/nginx/conf.d/default.conf
+COPY conf/nginx.conf /etc/nginx/nginx.conf
 
 COPY --from=build-stage /app/dist /usr/share/nginx/html
 
