--- a/FrontEnd/challet/conf/nginx.conf
+++ b/FrontEnd/challet/conf/nginx.conf
@@ -22,6 +22,9 @@ http {
     keepalive_timeout 65;
     gzip on;
 
+    # default.conf 포함 (default.conf에 없는 설정만 여기서 추가 가능)
+    include /etc/nginx/conf.d/default.conf;
+
     # React 앱을 서빙할 서버 설정
     server {
         listen 4000;  # Nginx가 4000 포트에서 대기하도록 설정
