--- a/FrontEnd/challet/conf/nginx.conf
+++ b/FrontEnd/challet/conf/nginx.conf
@@ -28,7 +28,7 @@ http {
     # React 앱을 서빙할 서버 설정
     server {
         listen 4000;  # Nginx가 4000 포트에서 대기하도록 설정
-        server_name react.local;
+        server_name react;
 
         # 정적 파일 서빙 설정
         location / {
