--- a/FrontEnd/challet/Dockerfile
+++ b/FrontEnd/challet/Dockerfile
@@ -11,7 +11,7 @@ FROM nginx:stable-alpine as production-stage
 # 저장된 경로에서 nginx.conf 파일을 복사
 COPY conf/nginx.conf /etc/nginx/nginx.conf
 
-COPY --from=build-stage /app/dist /usr/share/nginx/html
+COPY --from=build-stage /app/build /usr/share/nginx/html
 
 EXPOSE 4000
 CMD ["nginx", "-g", "daemon off;"]
