refactor: Dockerfile 경로 수정

--- a/FrontEnd/challet/Dockerfile
+++ b/FrontEnd/challet/Dockerfile
@@ -1,5 +1,5 @@
 FROM node:20 as build-stage
-WORKDIR /app
+WORKDIR /challet
 COPY package*.json ./
 
 RUN npm install --legacy-peer-deps
@@ -11,8 +11,8 @@ FROM nginx:stable-alpine as production-stage
 # 저장된 경로에서 nginx.conf 파일을 복사
 COPY conf/nginx.conf /etc/nginx/nginx.conf
 
-COPY --from=build-stage /app/dist /usr/share/nginx/html
-COPY --from=build-stage /app/dev-dist /usr/share/nginx/html
+COPY --from=build-stage /dist /usr/share/nginx/html
+COPY --from=build-stage /dev-dist /usr/share/nginx/html
 
 EXPOSE 4000
 CMD ["nginx", "-g", "daemon off;"]
