--- a/BankService/src/main/resources/application.yml
+++ b/BankService/src/main/resources/application.yml
@@ -41,7 +41,7 @@ eureka:
 # 공통 설정
 spring:
   application:
-    name: bank-service
+    name: ch-bank
   datasource:
     url: jdbc:mysql://challet.world:${dbport}/chbank-api?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -57,7 +57,7 @@ springdoc:
   api-docs:
     version: openapi_3_1
     enabled: true
-    path: /bank-service/v3/api-docs
+    path: api/ch-bank/v3/api-docs
   enable-spring-security: true
   default-consumes-media-type: application/json
   default-produces-media-type: application/json
