--- a/KbBankService/src/main/resources/application.yml
+++ b/KbBankService/src/main/resources/application.yml
@@ -66,3 +66,17 @@ jwt:
   secret: ${jwt_secret_key}
   access-exp: ${jwt_access_exp}
   refresh-exp: ${jwt_refresh_exp}
+
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: prometheus, health
+  endpoint:
+    prometheus:
+      enabled: true
+  prometheus:
+    metrics:
+      export:
+        enabled: true
