feat: 엑츄에이터, 프로메테우스 설정

--- a/NhBankService/src/main/resources/application.yml
+++ b/NhBankService/src/main/resources/application.yml
@@ -61,3 +61,16 @@ springdoc:
   enable-spring-security: true
   default-consumes-media-type: application/json
   default-produces-media-type: application/json
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: prometheus, health
+  endpoint:
+    prometheus:
+      enabled: true
+  prometheus:
+    metrics:
+      export:
+        enabled: true
