--- a/ShBankService/build.gradle
+++ b/ShBankService/build.gradle
@@ -50,6 +50,10 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
+    implementation 'org.springframework.boot:spring-boot-starter-actuator' // 엑츄에이터
+    implementation 'io.micrometer:micrometer-registry-prometheus' // 프로메테우스
+
+
 }
 
 dependencyManagement {
