--- a/ChalletApiGateway/build.gradle
+++ b/ChalletApiGateway/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webflux-ui', version: '2.2.0'
+
+    implementation 'org.springframework.boot:spring-boot-starter-actuator' // 엑츄에이터
+    implementation 'io.micrometer:micrometer-registry-prometheus' // 프로메테우스
 }
 
 dependencyManagement {
