refactor: application.yml 수정
- [x] server.port 제거
- [x] prometheus 설정 추가

--- a/ChalletService/src/main/resources/application.yml
+++ b/ChalletService/src/main/resources/application.yml
@@ -1,5 +1,5 @@
-server:
-  port: 8081
+#server:
+#  port: 8081
 
 spring:
   profiles:
@@ -66,3 +66,16 @@ jwt:
   secret: ${jwt_secret_key}
   access-exp: ${jwt_access_exp}
   refresh-exp: ${jwt_refresh_exp}
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: prometheus, health
+  endpoint:
+    prometheus:
+      enabled: true
+  prometheus:
+    metrics:
+      export:
+        enabled: true
