feat: actuator, prometheus 라이브러리 추가

--- a/ChalletDiscovery/build.gradle
+++ b/ChalletDiscovery/build.gradle
@@ -23,6 +23,10 @@ ext {
 
 dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
+
+    implementation 'org.springframework.boot:spring-boot-starter-actuator' // 엑츄에이터
+    implementation 'io.micrometer:micrometer-registry-prometheus' // 프로메테우스
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
