--- a/FrontEnd/challet/package.json
+++ b/FrontEnd/challet/package.json
@@ -10,17 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.654.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@types/react-datepicker": "^7.0.0",
     "@types/react-transition-group": "^4.4.11",
     "@woowa-babble/random-nickname": "^1.0.2",
-    "jwt-decode": "^4.0.0",
-    "@types/react-datepicker": "^7.0.0",
     "@zxing/browser": "^0.1.5",
     "@zxing/library": "^0.21.3",
     "axios": "^1.7.7",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
     "react-dates": "^21.8.0",
