--- a/KbBankService/src/main/resources/application.yml
+++ b/KbBankService/src/main/resources/application.yml
@@ -1,6 +1,3 @@
-# server:
-#   port: 8083
-
 spring:
   profiles:
     active: prod # 로컬(dev) / git(prod)
@@ -47,6 +44,11 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: challet
     password: ${mysqlpassword}
+    p6spy:
+      enabled: true
+      appender: com.p6spy.engine.spy.appender.Slf4JLogger
+      logMessageFormat:
+        p6spy: "%(currentTime)|%(executionTime)|%(category)|%(sqlSingleLine)"
   jpa:
     hibernate:
       ddl-auto: update
