refactor: endpoints 추가(info)

--- a/ChalletDiscovery/src/main/resources/application.yml
+++ b/ChalletDiscovery/src/main/resources/application.yml
@@ -14,7 +14,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: prometheus, health
+        include: prometheus, health, info
   endpoint:
     prometheus:
       enabled: true
