--- a/FrontEnd/challet/package.json
+++ b/FrontEnd/challet/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@stomp/stompjs": "^7.0.0",
     "@types/react-datepicker": "^7.0.0",
     "@types/react-transition-group": "^4.4.11",
     "@woowa-babble/random-nickname": "^1.0.2",
@@ -29,6 +30,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-transition-group": "^4.4.5",
+    "sockjs-client": "^1.6.1",
     "vite-plugin-pwa": "^0.20.5",
     "zustand": "^4.5.5"
   },
@@ -37,6 +39,7 @@
     "@types/axios": "^0.14.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/sockjs-client": "^1.5.4",
     "@typescript-eslint/eslint-plugin": "^8.5.0",
     "@typescript-eslint/parser": "^8.5.0",
     "@vitejs/plugin-react": "^4.3.1",
