--- a/ChalletService/src/main/resources/application.yml
+++ b/ChalletService/src/main/resources/application.yml
@@ -1,9 +1,9 @@
-server:
-  port: 8081
+#server:
+#  port: 8081
 
 spring:
   profiles:
-    active: dev # 로컬(dev) / git(prod)
+    active: prod # 로컬(dev) / git(prod)
 
 ---
 # 로컬(dev) 환경 설정
