--- a/FrontEnd/challet/package.json
+++ b/FrontEnd/challet/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.7.7",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
+    "global": "^4.4.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
@@ -31,6 +32,7 @@
     "react-router-dom": "^6.26.2",
     "react-transition-group": "^4.4.5",
     "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "vite-plugin-pwa": "^0.20.5",
     "zustand": "^4.5.5"
   },
@@ -40,6 +42,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/sockjs-client": "^1.5.4",
+    "@types/stompjs": "^2.3.9",
     "@typescript-eslint/eslint-plugin": "^8.5.0",
     "@typescript-eslint/parser": "^8.5.0",
     "@vitejs/plugin-react": "^4.3.1",
