--- a/BankService/src/main/resources/application.yml
+++ b/BankService/src/main/resources/application.yml
@@ -28,7 +28,7 @@ spring:
   config:
     activate:
       on-profile: prod
-    import: "optional:file:/BankService/src/main/resources/application-key.yml"
+    import: "file:/var/jenkins_home/workspace/ch-bank/BankService/src/main/resources/application-key.yml"
 
 eureka:
   client:
