--- a/ShBankService/src/main/resources/application.yml
+++ b/ShBankService/src/main/resources/application.yml
@@ -28,7 +28,7 @@ spring:
   config:
     activate:
       on-profile: prod
-    import: "optional:file:/ShBankService/src/main/resources/application-key.yml"
+    import: "file:/var/jenkins_home/workspace/sh-bank/ShBankService/src/main/resources/application-key.yml"
 
 eureka:
   client:
