--- a/ChalletService/src/main/resources/application.yml
+++ b/ChalletService/src/main/resources/application.yml
@@ -49,10 +49,10 @@ spring:
     password: ${mysqlpassword}
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
       dialect: org.hibernate.dialect.MySQLDialect
-    show-sql: true
     open-in-view: false
+
 
 springdoc:
   api-docs:
