--- a/FrontEnd/challet/Dockerfile
+++ b/FrontEnd/challet/Dockerfile
@@ -5,7 +5,7 @@ RUN npm install -g pnpm
 
 COPY package*.json pnpm-lock.yaml ./
 
-RUN pnpm install --legacy-peer-deps
+RUN pnpm install
 
 COPY . .
 
