feat: elasticsearch 설정 추가

--- a/BankService/src/main/resources/application.yml
+++ b/BankService/src/main/resources/application.yml
@@ -52,6 +52,8 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  elasticsearch:
+    uris: "challet.world:9200"
 
 
 springdoc:
