--- a/ChalletService/build.gradle
+++ b/ChalletService/build.gradle
@@ -73,7 +73,9 @@ dependencies {
     implementation 'net.nurigo:sdk:4.2.7'
 
     // redis
+    implementation 'org.springframework.boot:spring-boot-starter-cache:3.1.2'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'io.lettuce:lettuce-core:6.3.2.RELEASE'
 
 }
 
