feat: 달별 거래내역 조회 시 redis 적용

--- a/BankService/build.gradle
+++ b/BankService/build.gradle
@@ -65,6 +65,9 @@ dependencies {
 
     // openfeign
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
+    //redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
 }
 
 dependencyManagement {
