--- a/BankService/build.gradle
+++ b/BankService/build.gradle
@@ -68,6 +68,7 @@ dependencies {
 
     //redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 }
 
 dependencyManagement {
